--- a/layout/styles/freelancerlogin.css
+++ b/layout/styles/freelancerlogin.css
@@ -1,306 +1,282 @@
 @charset "utf-8";
-/*
-Template Name: Educational Theory
-Author: <a href="http://www.os-templates.com/">OS Templates</a>
-Author URI: http://www.os-templates.com/
-Licence: Free to use under our free template licence terms
-Licence URI: http://www.os-templates.com/template-terms
-File: Layout CSS
-*/
 
-@import url("navi.css");
-@import url("forms.css");
-@import url("tables.css");
-@import url("homepage.css");
-@import url("gallery.css");
-@import url("portfolio.css");
-@import url("featured_slide.css");
 
-html { overflow-y: scroll; }
-body { margin: 0; padding: 0; font-size: 13px; font-family: cursive; color: #333333; background-color: #C8CCCF;}
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap");
 
-.justify { text-align: justify; }
-.bold { font-weight: bold; }
-.center { text-align: center; }
-.right { text-align: right; }
-.nostart { margin: 0; padding: 0; list-style-type: none; }
+html, body {
+    margin: 0;
+    padding: 0;
+    font-size: 16px;
+    font-family: 'Poppins', sans-serif;
+    color: #333;
+    background-color: #F9F9F9;
+    line-height: 1.6;
+    overflow-x: hidden;
+}
 
-.clear:after { content: "."; display: block; height: 0; clear: both; visibility: hidden; line-height: 0; }
-.clear { display: inline-block; }
-html[xmlns] .clear { display: block; }
-* html .clear { height: 1%; }
+a {
+    outline: none;
+    text-decoration: none;
+    color: inherit;
+    transition: all 0.3s ease;
+}
 
-a { outline: none; text-decoration: none; }
+a:hover {
+    color: #4CAF50;
+}
 
-.fl_left, .imgl { float: left; }
-.fl_right, .imgr { float: right; }
+img {
+    max-width: 100%;
+    height: auto;
+    display: block;
+    border: none;
+}
 
-img { margin: 0; padding: 0; border: none; }
-.imgholder, .imgl, .imgr { padding: 4px; border: 1px solid #D8D8D8; text-align: center; }
-.imgl { margin: 0 15px 15px 0; clear: left; }
-.imgr { margin: 0 0 15px 15px; clear: right; }
+.clear:after {
+    content: "";
+    display: table;
+    clear: both;
+}
 
-/* ----------------------------------------------Wrapper------------------------------------- */
+.wrapper {
+    width: 100%;
+    margin: 0 ;
+}
 
-div.wrapper { display: block; width: 100%; text-align: left; }
-div.wrapper h1, div.wrapper h2, div.wrapper h3, div.wrapper h4, div.wrapper h5, div.wrapper h6 { margin: 0 0 15px 0; padding: 0; font-size: 16px; font-weight: normal; line-height: normal; }
-.row1 { color: #EBECED; background-color: #4F565B; }
-.row2, .row2 a { color: #ffffff; background-color: #5D666C; }
-.row3 { padding-top: 30px; color: #666666; background: url("images/featured_bg.gif") bottom left repeat-x #E0E0E0; }
-.row4 { background: url("images/quicknav_bg.gif") top left repeat-x; border-top: 1px solid #BCBCBC; border-bottom: 1px solid #BCBCBC; }
-.row5 { color: #848C92; background-color: #EBEDEE; }
-.row5 a { color: #000000; background-color: #EBEDEE; }
+/* ----------------------------------------------Responsive Design------------------------------------- */
 
-/* ----------------------------------------------Generalise------------------------------------- */
+@media (max-width: 768px) {
+    #container {
+        flex-direction: column;
+        padding: 20px;
+    }
 
-#header, #container, #academiclinks, #footer { display: block; position: relative; width: 960px; margin: 0 auto; }
+    #content {
+        width: 100%;
+    }
+
+    #column {
+        width: 100%;
+        margin-top: 20px;
+    }
+
+    #topnav ul {
+        flex-direction: column;
+        text-align: center;
+    }
+
+    #topnav li {
+        margin: 10px 0;
+    }
+
+    .login-form {
+        width: 100%;
+        padding: 20px;
+    }
+
+    #footer {
+        padding: 20px;
+    }
+}
 
 /* ----------------------------------------------Header------------------------------------- */
 
-#header { padding: 10px 0 30px 0; } /* Increased padding to pull down the header */
-#header h1, #header p, #header ul { margin: 0; padding: 0; list-style: none; line-height: normal; }
-#header h1 { font-size: 35px; font-variant: small-caps; }
-#header p { font-size: 14px; margin-top: 25px; }
-#header .fl_left { margin-top: 0px; }
-#header .fl_left p { margin-top: 4px; }
-#header .fl_right p { text-align: center;margin-left: 20px; }
+#header {
+    padding: 0;
+    text-align: center;
+    background-color: #4F565B;
+    color: #ffffff;
+}
 
+#header h1 {
+    font-size: 2.5rem;
+    text-transform: uppercase;
+    margin: 0;
+    letter-spacing: 2px;
+}
+
+#header p {
+    font-size: 1rem;
+    margin-top: 5px;
+}
 
 /* ----------------------------------------------Navbar------------------------------------- */
 
 #topnav {
-  display: flex;
-  justify-content: center; /* Centering the navbar links */
-  align-items: center;
-  background-color: #4F565B; /* Adjust to your preferred color */
-  position: fixed;
-  top: 0;
-  width: 100%;
-  z-index: 1000;
-  padding: 10px 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #333;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 1000;
+    padding: 15px 0;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
 #topnav ul {
-  margin: 0;
-  padding: 0;
-  list-style: none;
-  display: flex;
+    display: flex;
+    flex-wrap: wrap;
+    margin: 0;
+    padding: 0;
+    list-style: none;
 }
 
 #topnav li {
-  margin: 0 10px;
+    margin: 0 15px;
 }
 
 #topnav li a {
-  display: inline-block;
-  height: 40px;
-  line-height: 40px;
-  padding: 0 10px;
-  text-transform: uppercase;
-  color: #ffffff;
-  text-decoration: none;
-  font-weight: bold;
+    color: #ffffff;
+    font-weight: bold;
+    padding: 10px 20px;
+    text-transform: uppercase;
+    border-radius: 5px;
+    transition: background 0.3s ease;
 }
 
 #topnav li a:hover, #topnav li.active a {
-  background-color: #f0f0f0; /* Change to your preferred hover color */
-  border-radius: 5px; /* Optional: Adds a slight rounding to the hover effect */
+    background-color: #4CAF50;
 }
 
-#topnav li a:hover strong, #topnav li.active a strong {
-  color: #6a80a3; /* Change to your preferred active color */
+/* ----------------------------------------------Main Content------------------------------------- */
+
+#container {
+    padding: 80px 15px 60px;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    margin-top: 0px;
 }
 
-/* ----------------------------------------------Content------------------------------------- */
+#content {
+    width: 65%;
+}
 
-#container { padding: 30px 0; }
-#container h1, #container h2, #container h3, #container h4, #container h5, #container h6 { color: #000000; margin: 0 0 15px 0; padding: 0 0 10px 0; border-bottom: 2px solid #6a746a; margin-bottom: 45px; }
-#container.title 
-#container .readmore { display: block; width: 100%; text-align: right; }
-#content { display: block; float: left; width: 630px; }
+#content h1, #content h2, #content h3 {
+    color: #333;
+    font-size: 2rem;
+    margin-bottom: 20px;
+    border-bottom: 2px solid #4CAF50;
+    padding-bottom: 10px;
+}
 
-/* Comments */
+#content p {
+    margin-bottom: 20px;
+    line-height: 1.8;
+}
 
-#comments { margin-bottom: 40px; }
-#comments .commentlist { margin: 0; padding: 0; }
-#comments .commentlist ul { margin: 0; padding: 0; list-style: none; }
+#column {
+    width: 30%;
+}
 
-#comments .commentlist li.comment_odd, #comments .commentlist li.comment_even { margin: 0 0 10px 0; padding: 15px; list-style: none; }
-#comments .commentlist li.comment_odd { color: #666666; background-color: #F7F7F7; }
-#comments .commentlist li.comment_odd a { color: #179CFF; background-color: #F7F7F7; }
-#comments .commentlist li.comment_even { color: #666666; background-color: #E8E8E8; }
-#comments .commentlist li.comment_even a { color: #179CFF; background-color: #E8E8E8; }
-#comments .commentlist .author .name { font-weight: bold; }
-#comments .commentlist .submitdate { font-size: smaller; }
-#comments .commentlist p { margin: 10px 5px 10px 0; padding: 0; font-weight: normal; text-transform: none; }
-#comments .commentlist li .avatar { float: right; border: 1px solid #EEEEEE; margin: 0 0 0 10px; }
+/* ----------------------------------------------Login Form------------------------------------- */
 
-/* ----------------------------------------------Column------------------------------------- */
+.login-form {
+    margin: 0 auto;
+    padding: 40px;
+    border: 1px solid #ddd;
+    border-radius: 10px;
+    width: 100%;
+    max-width: 400px;
+    background-color: #fff;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    margin-top: 20px;
+}
 
-#column { display: block; float: right; width: 300px; }
-#column .holder, #column #featured { display: block; width: 300px; margin-bottom: 20px; }
-#column .holder h2.title { display: block; width: 100%; height: 65px; margin: 0; padding: 15px 0 0 0; font-size: 20px; text-transform: none; line-height: normal; border-bottom: 1px dotted #999999; }
-#column .holder h2.title img { float: left; margin: -15px 8px 0 0; padding: 5px; border: 1px solid #999999; }
-#column div.imgholder { display: block; width: 290px; margin: 0 0 10px 0; }
-#column .holder p.readmore { display: block; width: 100%; font-weight: bold; text-align: right; line-height: normal; }
+.login-form h2 {
+    text-align: center;
+    font-size: 24px;
+    margin-bottom: 20px;
+    text-transform: uppercase;
+    color: #4CAF50;
+}
 
-/* Featured Block */
+.login-form label {
+    display: block;
+    font-size: 16px;
+    margin-bottom: 10px;
+    font-weight: bold;
+}
 
-#column #featured ul, #column #featured h2, #column #featured p { margin: 0; padding: 0; list-style: none; color: #666666; background-color: #F7F7F7; }
-#column #featured a { color: #179CFF; background-color: #F7F7F7; }
-#column #featured li { display: block; width: 250px; margin: 0; padding: 20px 25px; color: #666666; background-color: #F7F7F7; }
-#column #featured li p.imgholder { display: block; width: 240px; height: 90px; margin: 20px 0 15px 0; }
-#column #featured li h2 { margin: 0; padding: 0 0 8px 0; font-weight: normal; font-family: Georgia, "Times New Roman", Times, serif; line-height: normal; border-bottom: 1px dotted #999999; }
-#column #featured li.last { border-bottom: 0; margin-bottom: 0; }
-#container #column #featured p.readmore { display: block; width: 100%; margin-top: 15px; height: auto; padding-left: 0; font-weight: bold; text-align: right; line-height: normal; background: none; }
-#container #column .readmore a { display: block; width: 100%; margin-top: 15px; height: auto; padding-left: 0; font-weight: bold; text-align: right; line-height: normal; background: none; }
-#column .latestnews { display: block; width: 100%; margin: 0; padding: 0; list-style: none; }
-#column .latestnews li { display: block; width: 100%; height: 99px; margin: 0 0 11px 0; padding: 0 0 21px 0; border-bottom: 1px dotted #C7C5C8; overflow: hidden; }
-#column .latestnews li.last { margin-bottom: 0; }
-#column .latestnews p { display: inline; }
-#column .latestnews img { float: left; margin: 0 10px 0 0; padding: 4px; border: 1px solid #C7C5C8; clear: left; }
+.login-form input[type="text"],
+.login-form input[type="password"],
+.login-form input[type="email"] {
+    display: block;
+    width: 100%;
+    padding: 12px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    margin-bottom: 20px;
+    box-sizing: border-box;
+    font-size: 16px;
+}
 
-/* ----------------------------------------------Academic link Block------------------------------------- */
+.login-form button {
+    width: 100%;
+    padding: 12px;
+    background-color: #4CAF50;
+    border: none;
+    border-radius: 5px;
+    color: #fff;
+    font-weight: bold;
+    font-size: 16px;
+    cursor: pointer;
+    transition: background 0.3s ease;
+}
 
-#academiclinks { padding: 30px 0; border-bottom: 1px solid #949BA0; }
-#academiclinks .linkbox { display: block; float: left; width: 210px; margin: 0 40px 0 0; font-size: 12px; }
-#academiclinks a { color: #6A737A; background-color: #C8CCCF; }
-#academiclinks h2, #academiclinks ul { margin: 0; padding: 0; list-style: none; }
-#academiclinks h2 { margin: 0 0 8px 0; padding: 0 0 8px 0; font-size: 14px; text-transform: uppercase; border-bottom: 1px solid #949BA0; }
-#academiclinks ul li { line-height: 1.6em; }
-#academiclinks .last { margin: 0; }
+.login-form button:hover {
+    background-color: #45a049;
+}
+
+.login-form a {
+    display: block;
+    text-align: center;
+    margin-top: 15px;
+    color: #333;
+    font-weight: bold;
+}
+
+
 
 /* ----------------------------------------------Footer------------------------------------- */
 
-#footer { padding: 30px 0; }
-#footer a { color: #6A737A; background-color: #C8CCCF; }
-#footer .fl_left { margin-bottom: 30px; }
-#footer .fl_left .fl_left { margin-bottom: 0; }
-#footer .fl_left img { margin-bottom: 20px; }
-#footer address { display: inline; float: left; margin-left: 40px; text-transform: none; font-style: normal; line-height: 1.6em; }
-#footer .fl_right { display: block; width: 400px; margin-bottom: 30px; }
-#footer .fl_right p { margin: 0 0 15px 0; padding: 0; line-height: normal; }
-#footer .fl_right #social { display: block; width: 100%; margin: 0 0 15px 0; padding: 0; line-height: normal; }
-#footer .fl_right #social ul { margin: 0; padding: 0; list-style: none; }
-#footer .fl_right #social li { float: left; /* Only For IE */ }
-#footer .fl_right #social a { display: block; float: left; width: 49px; height: 49px; margin-right: 20px; overflow: hidden; text-indent: -4000em; background: url("images/social-sprite.gif") no-repeat; }
-#footer .fl_right #social li.last a { margin-right: 0; }
-#footer .last { margin: 0; }
+#footer {
+    padding: 30px 0;
+    background-color: #333;
+    color: #fff;
+    text-align: center;
+}
+
+#footer p {
+    margin: 0;
+    font-size: 14px;
+}
+
+#footer a {
+    color: #4CAF50;
+}
+
+#footer a:hover {
+    text-decoration: underline;
+}
 
 /* ----------------------------------------------Copyright------------------------------------- */
 
-#copyright { display: block; padding: 15px 20px; clear: both; }
-#copyright .fl_left, #copyright .fl_right { margin: 0; width: auto; }
-#copyright p { margin: 0; padding: 0; }
-#copyright, #copyright a { color: #C8CCCF; background-color: #949BA0; }
-
-
-
-.login-form {
-    margin: 0 auto; /* Center the form */
-    padding: 50px; /* Adjusted padding */
-    border: 5px solid #6a746a;
-    border-radius: 4px;
-    width: 300px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    margin-top: 20px;
-    margin-bottom: 70px;
-  }
-  
-  .login-form label {
-    display: block;
-    margin-bottom: 10px;
-    font-weight: bold;
-    font-size: large;
-  }
-  .login-form label {
-    display: block;
-    font-weight: bold;
-    font-size: large; /* Increased size */
-    margin-bottom: 10px;
-  }
-  .login-form h2 {
+#copyright {
+    padding: 15px 20px;
+    background-color: #2c2c2c;
+    color: #C8CCCF;
     text-align: center;
-    margin-bottom: 40px;
-    text-transform: uppercase;
-    font-size: x-large;
-    border-bottom: 2px solid #6a746a;
-    padding-bottom: 10px;
-    color: #000000;
-  }
-  
-  
-  .login-form input[type="text"],
-.login-form input[type="password"] {
-  display: block;
-  width: 100%;
-  padding: 10px;
-  border: 3px solid #ccc;
-  border-radius: 3px;
-  box-sizing: border-box;
-  margin-bottom: 20px; /* Increased margin-bottom for spacing */
-  padding-bottom: 10px;
 }
-  
-  .login-form input[type="checkbox"] {
-    margin-right: 5px;
-  }
-  
-  .login-form button {
-    background-color: #4CAF50;
-    color: white;
-    padding: 10px 20px;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    width: 100%;
-    font-weight: bold;
-  }
-  
-  .login-form button:hover {
-    background-color: #3e8e41;
-  }
-  
-  .login-form a {
-    text-decoration: none;
-    color: #333;
-    margin-top: 20px;
-    display: block;
-    text-align: center;
-  }
 
-  .login-form input[type="email"] {
-    display: block;
-    width: 100%;
-    padding: 10px;
-    border: 3px solid #ccc;
-    border-radius: 3px;
-    box-sizing: border-box;
-    margin-bottom: 20px; /* Increased margin-bottom for spacing */
-    padding-bottom: 10px;
-  }
-  .login-form .register-container {
-    text-align: center;
-    margin-top: 20px;
-    display: inline-flex;
-    width: 100%;
-    
-  }
-  
-  .login-form .register-container span {
-    margin-right: 5px;
-    
-  }
-  
-  .login-form .register-container a {
-    text-decoration: none;
+#copyright a {
     color: #4CAF50;
-    font-weight: bold;
-    margin-left: 5px;
-  }
-  
-  .login-form .register-container a:hover {
-    text-decoration: underline;
-  }
-  
+}
 
+/* ----------------------------------------------Transitions------------------------------------- */
+
+button, a {
+    transition: all 0.3s ease;
+}
