--- a/layout/styles/layout.css
+++ b/layout/styles/layout.css
@@ -15,7 +15,6 @@ File: Layout CSS
 @import url("gallery.css");
 @import url("portfolio.css");
 @import url("featured_slide.css");
-
 html { overflow-y: scroll; }
 body { margin: 0; padding: 0; font-size: 13px; font-family: cursive; color: #333333; background-color: #C8CCCF; }
 
@@ -53,7 +52,7 @@ div.wrapper h1, div.wrapper h2, div.wrapper h3, div.wrapper h4, div.wrapper h5, 
 
 /* ----------------------------------------------Generalise------------------------------------- */
 
-#header, #container, #academiclinks, #footer { display: block; position: relative; width: 960px; margin: 0 auto; }
+#header, #container, #academiclinks, #footer { display: block; position: relative;  margin: 0 auto; }
 
 /* ----------------------------------------------Header------------------------------------- */
 
